apply color theme

--- a/website/src/stylesheets/_home.scss
+++ b/website/src/stylesheets/_home.scss
@@ -84,7 +84,7 @@
     border-image-slice: 2;
   }
   .btn:hover {
-    background: rgba(0, 173, 230, 0.3);
+    background: rgba($primary, 0.3);
   }
 }
 
